--- a/docs/_sass/highlight.sass
+++ b/docs/_sass/highlight.sass
@@ -1,5 +1,5 @@
 .highlight
-  background-color: $pre-background
+  background-color: var(--#{$prefix}-pre-background)
   border-radius: $radius-large
   color: #586e75
   pre
