--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -58,7 +58,7 @@
 
 .bd-link
   border-radius: $radius-large
-  color: $text-light
+  color: var(--#{$prefix}-text-light)
   display: block
   font-size: $size-5
   padding: 1rem 3rem 1.5rem 5rem
@@ -68,7 +68,7 @@
   strong
     font-weight: $weight-semibold
   &:hover
-    background-color: $scheme-main-bis
+    background-color: var(--#{$prefix}-scheme-main-bis)
 
 .bd-link-surtitle
   float: right
@@ -91,7 +91,7 @@
   min-width: 1.5em
 
 .bd-link-counter
-  color: $link
+  color: var(--#{$prefix}-link)
   display: block
   counter-increment: bd-links
   font-weight: $weight-normal
@@ -123,7 +123,7 @@
     width: 50%
 
 .bd-link-name
-  color: $text-strong
+  color: var(--#{$prefix}-text-strong)
   font-size: $size-4
   font-weight: $weight-semibold
 
@@ -139,11 +139,11 @@
     min-width: calc(33.3333% - 3rem)
 
 .bd-doc-title
-  color: $text-strong
+  color: var(--#{$prefix}-text-strong)
   a
     color: currentColor
     &:hover
-      color: $link
+      color: var(--#{$prefix}-link)
   &:not(:last-child)
     margin-bottom: 0.75rem
 
@@ -227,15 +227,15 @@
     background-color: darken($rss, 10%)
 
 .bd-view-all-versions
-  color: $text-light
+  color: var(--#{$prefix}-text-light)
   &:hover
     text-decoration: underline
 
 .bd-feature-title
-  color: $text-light
+  color: var(--#{$prefix}-text-light)
   a
     border-bottom: 1px solid transparent
-    color: $text-strong
+    color: var(--#{$prefix}-text-strong)
     &:hover
       border-bottom-color: $primary
 
@@ -273,14 +273,14 @@
   font-size: 1.25em
   vertical-align: middle
 
-$notification-background-color: $background !default
+$notification-background-color: var(--#{$prefix}-background) !default
 $notification-radius: $radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 
 .bd-notification
-  background-color: $background
+  background-color: var(--#{$prefix}-background)
   border-radius: $radius
-  color: $text-light
+  color: var(--#{$prefix}-text-light)
   font-weight: $weight-semibold
   padding: 1.25rem 0
   position: relative
@@ -292,9 +292,9 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     color: currentColor
   code,
   pre
-    background-color: rgba($scheme-invert, 0.2)
+    background-color: rgba(var(--#{$prefix}-scheme-invert), 0.2)
     border-radius: $radius
-    color: $scheme-main
+    color: var(--#{$prefix}-scheme-main)
   pre code
     background-color: transparent
   // Colors
