--- a/docs/_sass/twitter.sass
+++ b/docs/_sass/twitter.sass
@@ -1,14 +1,14 @@
 // $tw-black: #1c2022
-$tw-black: $text-strong
+$tw-black: var(--#{$prefix}-text-strong)
 $tw-blue: #2b7bb9
 $tw-grey: #697882
 $tw-border: #e1e8ed
 
 .bd-tws-home
-  background-color: $scheme-main-bis
+  background-color: var(--#{$prefix}-scheme-main-bis)
 
 .bd-tw
-  background-color: $scheme-main-bis
+  background-color: var(--#{$prefix}-scheme-main-bis)
   border-radius: $radius-large
   color: $tw-grey
   flex-shrink: 0
@@ -18,7 +18,7 @@ $tw-border: #e1e8ed
   padding: 20px
   text-align: left
   &.bd-is-white
-    background-color: $scheme-main
+    background-color: var(--#{$prefix}-scheme-main)
 
 .bd-tw-header
   align-items: stretch
@@ -45,7 +45,7 @@ $tw-border: #e1e8ed
     width: 36px
 
 .bd-tw-fullname
-  color: $text-strong
+  color: var(--#{$prefix}-text-strong)
   display: block
   font-size: 16px
   font-weight: 700
@@ -163,7 +163,7 @@ $tw-border: #e1e8ed
     min-height: 632px
 
 .twitter-tweet:not(.twitter-tweet-rendered)
-  background-color: $scheme-main
+  background-color: var(--#{$prefix}-scheme-main)
   border: 1px solid $tw-border
   border-radius: 5px
   color: $tw-grey
