--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -164,7 +164,7 @@ $structure-invert: $danger-invert
   position: relative
   &::before
     +overlay
-    background: rgba($scheme-invert, 0.7)
+    background: rgba(var(--#{$prefix}-scheme-invert), 0.7)
     background: $background
     border: 1px solid $border
     content: ""
@@ -193,7 +193,7 @@ $structure-invert: $danger-invert
   .bd-expand
     background: none
     border: none
-    color: $text
+    color: var(--#{$prefix}-text)
     cursor: pointer
     font-size: 0.625rem
     outline: none
