--- a/docs/_sass/header.sass
+++ b/docs/_sass/header.sass
@@ -4,19 +4,19 @@
   &:hover
     background: $github
     border-color: $github
-    color: $scheme-main
+    color: var(--#{$prefix}-scheme-main)
 
 .bd-tw-button
   background-color: $twitter
-  color: $scheme-main
+  color: var(--#{$prefix}-scheme-main)
   border-color: transparent !important
   &:hover
     background-color: darken($twitter, 2.5%)
-    color: $scheme-main
+    color: var(--#{$prefix}-scheme-main)
   &:active,
   &:focus
     background-color: darken($twitter, 5%)
-    color: $scheme-main
+    color: var(--#{$prefix}-scheme-main)
 
 #moreDropdown
   .navbar-item
