--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -29,13 +29,13 @@
   min-height: 80px
   text-align: center
   &.is-text
-    color: $text-light
+    color: var(--#{$prefix}-text-light)
     font-size: 0.75em
     line-height: 1.25
     min-height: 0
 
 .bd-partnrs
-  background-color: $scheme-main-bis
+  background-color: var(--#{$prefix}-scheme-main-bis)
   #carbonads
     .carbon-text
       padding-bottom: 0
@@ -43,7 +43,7 @@
       display: none
 
 .bd-partner-title
-  color: $border-hover
+  color: var(--#{$prefix}-border-hover)
   font-size: 0.875rem
   margin-bottom: 1rem
 
@@ -57,11 +57,11 @@
 
 .bd-minis-link
   @extend %center
-  color: $text-light
+  color: var(--#{$prefix}-text-light)
   .icon
     margin-right: 0.25em
   strong
-    color: $text-light
+    color: var(--#{$prefix}-text-light)
     margin-left: 0.25em
 
 .bd-minis-list
